# Alexandria

./: .tool-versions  CLAUDE.md  MARKDOWN_SHOWCASE.md  README.md  package.json  pnpm-lock.yaml  vite.config.js
documentation/: .SPRINT4.MD.swp  SPRINT1.md  SPRINT10.md  SPRINT11.md  SPRINT13.md  SPRINT15.md  SPRINT16.md  SPRINT17.md  SPRINT18.md  SPRINT2.MD  SPRINT22.md  SPRINT23.md  SPRINT24.md  SPRINT25.md  SPRINT26.md  SPRINT27.md  SPRINT28.md  SPRINT29.md  SPRINT3.MD  SPRINT30.md  SPRINT31.md  SPRINT32.md  SPRINT33.md  SPRINT34.md  SPRINT35.md  SPRINT36.md  SPRINT37.md  SPRINT38.md  SPRINT4.MD  SPRINT5.MD  SPRINT6.MD  SPRINT7.MD  SPRINT8.MD  SPRINT9.md  sprint12.md  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_workflows.sql  0003_notes.sql  0004_pinned_and_articles.sql  0005_master_map.sql  0006_map_text_nodes.sql  0007_archived_entities.sql  0008_map_comment_and_custom_kinds.sql  0009_feedback_kanban.sql  0010_map_title_and_size.sql  0011_diagrams.sql  0012_drop_diagrams.sql  0013_feedback_columns.sql  0014_map_board_node.sql  0015_one_list_per_day.sql  0016_flashcards.sql  0017_blueprints.sql  0018_blueprint_node_image.sql  0019_blueprint_frame.sql  0020_backlog.sql
src-tauri/src/: error.rs  lib.rs  main.rs  markdown.rs
src-tauri/src/commands/: articles.rs  blueprints.rs  diagrams.rs  export.rs  feedback.rs  flashcards.rs  images.rs  lists.rs  map.rs  mod.rs  notes.rs  search.rs  tags.rs  todos.rs  workflows.rs
src-tauri/src/db/: mod.rs  models.rs
(+71 files in other folders)
